test/sema/nonmutating-member-function.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

class Foo {
    let i: int;

    func bar() {
        // CHECK: [[@LINE+1]]:31: error: cannot initialize variable of type 'mutable Foo*' with 'Foo*'
        let f: mutable Foo* = this;
    }
}
